--- a/sbin/ipnat/ipnat.8
+++ b/sbin/ipnat/ipnat.8
@@ -13,7 +13,7 @@ The
 .Nm
 utility
 provides control over the kernel's network address translation (NAT).
-The NAT facility remaps IP addresses from one range the another.
+The NAT facility remaps IP addresses from one range to another.
 It can be used to provide internal networks with Internet connectivity by
 mapping several private IP addresses to a single routeable
 .Pq i.e., Dq real
