--- a/usr.sbin/chroot/chroot.8
+++ b/usr.sbin/chroot/chroot.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/usr.sbin/chroot/chroot.8,v 1.5 2001/05/01 17:58:06 aaron Exp $
+.\" $OpenBSD: src/usr.sbin/chroot/chroot.8,v 1.6 2001/05/28 15:26:55 aaron Exp $
 .\"
 .\" Copyright (c) 1988, 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -32,7 +32,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)chroot.8	5.3 (Berkeley) 3/16/91
-.\"	$Id: chroot.8,v 1.4 2000/08/17 15:28:36 mickey Exp $
+.\"	$Id: chroot.8,v 1.5 2001/05/01 17:58:06 aaron Exp $
 .\"
 .Dd March 16, 1991
 .Dt CHROOT 8
@@ -46,7 +46,7 @@
 .Op Ar command
 .Sh DESCRIPTION
 The
-.Nm chroot
+.Nm
 command changes its root directory to the supplied directory
 .Ar newroot
 and executes
