--- a/share/man/man4/man4.vax/hk.4
+++ b/share/man/man4/man4.vax/hk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.vax/Attic/hk.4,v 1.5 2001/04/18 11:27:39 hugh Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.vax/Attic/hk.4,v 1.6 2001/06/20 16:49:43 millert Exp $
 .\"	$NetBSD: hk.4,v 1.3 1996/03/03 17:13:37 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -55,7 +55,7 @@ is a typical block-device disk driver; block device
 .Tn I/O
 is
 described in
-.Xr physio 4 .
+.Xr physio 9 .
 .Pp
 The script
 .Xr MAKEDEV 8
