--- a/share/man/man4/ahc.4
+++ b/share/man/man4/ahc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/ahc.4,v 1.15 2000/12/21 18:15:13 avsm Exp $
+.\"	$OpenBSD: src/share/man/man4/ahc.4,v 1.16 2001/06/22 12:15:43 mpech Exp $
 .\"	$NetBSD: ahc.4,v 1.1.2.1 1996/08/25 17:22:14 thorpej Exp $
 .\"
 .\" Copyright (c) 1995, 1996
@@ -189,8 +189,6 @@ Queuing Registers - Allows queuing of new transactions without pausing the
 sequencer.
 .El
 .Ed
-.Pp
-
 .Sh SCSI CONTROL BLOCKS (SCBs)
 Every transaction sent to a device on the SCSI bus is assigned a
 .Sq SCSI Control Block
