Fix missing .Nd.
Reported by espie@

--- a/kerberosV/src/lib/krb5/krb5_init_context.3
+++ b/kerberosV/src/lib/krb5/krb5_init_context.3
@@ -6,6 +6,7 @@
 .Sh NAME
 .Nm krb5_init_context ,
 .Nm krb5_free_context
+.Nd create and delete krb5_context structures
 .Sh SYNOPSIS
 .Fd #include <krb5.h>
 .Ft krb5_error_code
