--- a/libexec/login_krb4/login_krb4.8
+++ b/libexec/login_krb4/login_krb4.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/libexec/login_kerberos/Attic/login_kerberos.8,v 1.1 2000/12/12 02:31:38 millert Exp $
+.\" $OpenBSD: src/libexec/login_krb4/Attic/login_krb4.8,v 1.1 2001/06/24 23:26:22 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
