--- a/share/man/man5/pf.nat.5
+++ b/share/man/man5/pf.nat.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD $
+.\"	$OpenBSD: src/share/man/man5/Attic/pf.nat.5,v 1.2 2001/06/26 00:54:57 ian Exp $
 .\"
 .\" Copyright (c) 2001 Ian Darwin.  All rights reserved.
 .\"
