implement djb's getpeereid(2), to allow local-domain servers to determine client credentials. mostly from superscript.com. deraadt@ ok

--- a/lib/libc/sys/getsockname.2
+++ b/lib/libc/sys/getsockname.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/sys/getsockname.2,v 1.14 2000/10/18 05:12:09 aaron Exp $
+.\"	$OpenBSD: src/lib/libc/sys/getsockname.2,v 1.15 2001/06/26 19:56:52 dugsong Exp $
 .\"	$NetBSD: getsockname.2,v 1.6 1995/10/12 15:41:00 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -152,6 +152,7 @@ process address space.
 .Xr accept 2 ,
 .Xr bind 2 ,
 .Xr getpeername 2 ,
+.Xr getpeereid 2 ,
 .Xr socket 2
 .Sh BUGS
 Names bound to sockets in the UNIX domain are inaccessible;
