--- a/lib/libc/sys/getpeereid.2
+++ b/lib/libc/sys/getpeereid.2
@@ -1,5 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/sys/getpeername.2,v 1.16 2001/06/26 19:56:52 dugsong Exp $
-.\"	$NetBSD: getpeername.2,v 1.6 1995/10/12 15:40:56 jtc Exp $
+.\"	$OpenBSD: src/lib/libc/sys/Attic/getpeereid.2,v 1.1 2001/06/26 19:56:52 dugsong Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -31,76 +30,50 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.\"
-.\"     @(#)getpeername.2	8.1 (Berkeley) 6/4/93
-.\"
-.Dd July 17, 1999
-.Dt GETPEERNAME 2
+.Dd June 26, 2001
+.Dt GETPEEREID 2
 .Os
 .Sh NAME
-.Nm getpeername
-.Nd get name of connected peer
+.Nm getpeereid
+.Nd get effective user and group identification of locally-connected peer
 .Sh SYNOPSIS
 .Fd #include <sys/types.h>
 .Fd #include <sys/socket.h>
 .Ft int
-.Fn getpeername "int s" "struct sockaddr *name" "socklen_t *namelen"
+.Fn getpeereid "int s" "uid_t *euid" "gid_t *egid"
 .Sh DESCRIPTION
-.Fn getpeername
-returns the address information of the peer connected to socket
+.Fn getpeereid
+returns the effective user ID and group ID of the peer connected to
+the UNIX domain socket
 .Fa s .
-One common use occurs when a process inherits an open socket, such as
-TCP servers forked from
-.Xr inetd 8 .
-In this scenario,
-.Fn getpeername
-is used to determine the connecting client's IP address.
+
+One common use is for UNIX domain servers to determine the credentials
+of clients that have connected to it.
 .Pp
-.Fn getpeername
+.Fn getpeereid
 takes three parameters:
 .Pp
 .Fa s
-Contains the file descriptor of the socket whose peer should be looked up.
+Contains the file descriptor of the socket whose peer credentials
+should be looked up.
 .Pp
-.Fa name
+.Fa euid
 Points to a
-.Li sockaddr
-structure that will hold the address information for the connected peer.
-Normal use requires one to use a structure
-specific to the protocol family in use, such as
-.Li sockaddr_in
-(IPv4) or
-.Li sockaddr_in6
-(IPv6), cast to a (struct sockaddr *).
+.Li uid_t
+variable into which the effective user ID for the connected peer will
+be stored.
 .Pp
-For greater portability, especially with the newer protocol families, the new
-.Li struct sockaddr_storage
-should be used.
-.Li sockaddr_storage
-is large enough to hold any of the other sockaddr_* variants.
-On return, it can be cast to the correct sockaddr type,
-based the protocol family contained in its ss_family field.
-.Pp
-.Fa namelen
-Indicates the amount of space pointed to by
-.Fa name ,
-in bytes.
-.Pp
-If address information for the local end of the socket is required, the
-.Xr getsockname 2
-function should be used instead.
-.Pp
-If
-.Fa name
-does not point to enough space to hold the entire socket address, the
-result will be truncated to
-.Fa namelen
-bytes.
+.Fa guid
+Points to a
+.Li gid_t
+variable into which the effective group ID for the connected peer will
+be stored.
 .Sh RETURN VALUES
 If the call succeeds, a 0 is returned and
-.Fa namelen
-is set to the actual size of the socket address returned in
-.Fa name .
+.Fa euid
+and
+.Fa egid
+are set to the effective user ID and group ID of the connected peer.
 Otherwise,
 .Va errno
 is set and a value of \-1 is returned.
@@ -117,6 +90,8 @@ is not a valid descriptor.
 The argument
 .Fa s
 is a file, not a socket.
+.It Bq Er EOPNOTSUPP
+The socket is not in the UNIX domain.
 .It Bq Er ENOTCONN
 The socket is not connected.
 .It Bq Er ENOBUFS
@@ -124,18 +99,20 @@ Insufficient resources were available in the system
 to perform the operation.
 .It Bq Er EFAULT
 The
-.Fa name
-parameter points to memory not in a valid part of the
+.Fa euid
+or
+.Fa egid
+parameters point to memory not in a valid part of the
 process address space.
 .El
 .Sh SEE ALSO
 .Xr accept 2 ,
 .Xr bind 2 ,
 .Xr getsockname 2 ,
-.Xr getpeereid 2 ,
+.Xr getpeername 2 ,
 .Xr socket 2
 .Sh HISTORY
 The
-.Fn getpeername
+.Fn getpeereid
 function call appeared in
-.Bx 4.2 .
+.Ox 3.0 .
