--- a/usr.bin/dirname/dirname.1
+++ b/usr.bin/dirname/dirname.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/basename/Attic/dirname.1,v 1.7 2000/03/04 21:12:01 aaron Exp $
+.\"	$OpenBSD: src/usr.bin/dirname/dirname.1,v 1.1 2001/07/05 22:06:25 pjanzen Exp $
 .\"
 .\" Copyright (c) 1990, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
