--- a/share/man/man4/iha.4
+++ b/share/man/man4/iha.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD $
+.\"	$OpenBSD: src/share/man/man4/iha.4,v 1.6 2001/07/13 11:53:39 brad Exp $
 .\"
 .\" Copyright (c) 2001, Kenneth R. Westerback.  All rights reserved.
 .\"
