--- a/share/man/man4/ami.4
+++ b/share/man/man4/ami.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/ami.4,v 1.4 2001/07/09 07:04:21 mickey Exp $
+.\"	$OpenBSD: src/share/man/man4/ami.4,v 1.5 2001/07/13 17:33:32 pvalchev Exp $
 .\"
 .\" Copyright (c) 2001 Michael Shalayeff.  All rights reserved.
 .\"
@@ -38,7 +38,7 @@ driver.
 The
 .Nm
 driver was written by
-.An Michael Shalayeff Aq mickey@opensbd.org .
+.An Michael Shalayeff Aq mickey@openbsd.org .
 .Sh HISTORY
 The
 .Nm
