--- a/libexec/rpc.yppasswdd/rpc.yppasswdd.8
+++ b/libexec/rpc.yppasswdd/rpc.yppasswdd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/libexec/rpc.yppasswdd/rpc.yppasswdd.8,v 1.12 2000/11/09 17:53:36 aaron Exp $
+.\"	$OpenBSD: src/libexec/rpc.yppasswdd/rpc.yppasswdd.8,v 1.13 2001/08/02 18:37:34 mpech Exp $
 .\"
 .\" Copyright (c) 1994 Mats O Jansson <moj@stacken.kth.se>
 .\" All rights reserved.
@@ -90,5 +90,5 @@ For futher information see
 .Xr securenet 5 ,
 .Xr ypserv.acl 5 ,
 .Xr yp 8
-.Sh AUTHOR
+.Sh AUTHORS
 Mats O Jansson <moj@stacken.kth.se>
