--- a/usr.sbin/ypserv/mknetid/mknetid.8
+++ b/usr.sbin/ypserv/mknetid/mknetid.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/ypserv/mknetid/mknetid.8,v 1.8 2000/11/09 17:53:30 aaron Exp $
+.\"	$OpenBSD: src/usr.sbin/ypserv/mknetid/mknetid.8,v 1.9 2001/08/02 18:37:35 mpech Exp $
 .\"
 .\" Copyright (c) 1996 Mats O Jansson <moj@stacken.kth.se>
 .\" All rights reserved.
@@ -102,5 +102,5 @@ file.
 .Xr netid 5 ,
 .Xr passwd 5 ,
 .Xr yp 8
-.Sh AUTHOR
+.Sh AUTHORS
 Mats O Jansson <moj@stacken.kth.se>
