OpenBSD id-tags

--- a/lib/libc/net/getrrsetbyname.3
+++ b/lib/libc/net/getrrsetbyname.3
@@ -1,4 +1,4 @@
-.\" $Id: getrrsetbyname.3,v 1.7 2001/07/30 10:58:26 jakob Exp $
+.\" $OpenBSD: src/lib/libc/net/getrrsetbyname.3,v 1.2 2001/08/06 15:00:48 jakob Exp $
 .\"
 .\" Copyright (C) 2000, 2001  Internet Software Consortium.
 .\"
