--- a/usr.sbin/pkg_install/create/pkg_create.1
+++ b/usr.sbin/pkg_install/create/pkg_create.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pkg_install/create/Attic/pkg_create.1,v 1.18 2000/11/09 17:53:20 aaron Exp $
+.\"	$OpenBSD: src/usr.sbin/pkg_install/create/Attic/pkg_create.1,v 1.19 2001/08/17 11:13:58 mpech Exp $
 .\"
 .\" FreeBSD install - a package for the installation and maintainance
 .\" of non-core utilities.
@@ -450,7 +450,8 @@ command first appeared in
 .It "Jordan Hubbard"
 most of the work
 .It "John Kohl"
-refined it for NetBSD
+refined it for
+.Nx
 .El
 .Sh BUGS
 Hard links between files in a distribution must be bracketed by
