--- a/libexec/smtpd/smtpd/smtpd.8
+++ b/libexec/smtpd/smtpd/smtpd.8
@@ -1,11 +1,10 @@
-.\"	$OpenBSD: src/libexec/smtpd/smtpd/Attic/smtpd.8,v 1.18 2001/01/28 19:34:33 niklas Exp $
+.\"	$OpenBSD: src/libexec/smtpd/smtpd/Attic/smtpd.8,v 1.19 2001/08/20 06:09:32 mpech Exp $
 .Dd December 10, 1997
 .Dt SMTPD 8
 .Os
 .Sh NAME
 .Nm smtpd
-.Nd
-Obtuse Systems SMTPD message storing daemon
+.Nd Obtuse Systems SMTPD message storing daemon
 .Sh SYNOPSIS
 .Nm smtpd
 .Op Fl HPDLq
